Closed Bug 413444 Opened 17 years ago Closed 16 years ago

[10.5] Autocomplete windows' cells are semi-editable

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: chris)

Details

Attachments

(1 file, 1 obsolete file)

This happens in both the location bar's autocomplete and the forthcoming multiple accounts formfill autocomplete

STR:

1. Type something in the location bar that will trigger autocomplete results
2. Arrow down to highlight a result
3. Click on the highlighted result with the mouse

AR: Entry becomes semi-editable (editable appearance, but no editing can be performed)

ER: Not editable; clicking causes the entry to be chosen for autocomplete and away you go to the new page.

This can be a bit temperamental to reproduce in the location bar autocomplete for some reason, but I can repro 100% of the time with the formfill autocomplete.

I can never repro with 10.3, and given our previous experience with 10.5 NSTableView changes, I expect this is a 10.5 change that we want to override for our "read-only" table views.
Attached patch Fix v1.0 (obsolete) — Splinter Review
Sets the table columns as not editable when awakening from the nib. Probably don't need to do that for the icon column, but I did it anyway. Fixes behaviour on the location bar popup, haven't tested for the formfill.
Assignee: nobody → trendyhendy2000
Status: NEW → ASSIGNED
Attachment #336582 - Flags: review?
Attachment #336582 - Flags: review? → review?(murph)
Attached patch Fix v1.1Splinter Review
Added fix for the formfill autocomplete popup.
Attachment #336582 - Attachment is obsolete: true
Attachment #336596 - Flags: review?(murph)
Attachment #336582 - Flags: review?(murph)
Comment on attachment 336596 [details] [diff] [review]
Fix v1.1

r=murph
Attachment #336596 - Flags: review?(murph) → review+
Attachment #336596 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #336596 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Comment on attachment 336596 [details] [diff] [review]
Fix v1.1

sr=smorgan

Thanks for tackling all these polish issues! We haven't done enough of this lately.
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: