Bug 413444 - [10.5] Autocomplete windows' cells are semi-editable.  Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=murph, sr=smorgan